--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <div class="card-body">
                                 <div class="h5">Seconde général</div>
                                 <p class="category">Lycée Philibert Delorme</p>
-                                <p>BAC Professionnel Système Numérique. Obtenu avec mention Très Bien</p>
+                                <p>Seconde générale et technologique option SI</p>
                             </div>
                         </div>
                     </div>
