--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Seconde général</div>
-                                <p class="category">Lycée Philibert Delorme</p>
+                                <p class="category">Lycée Philibert Delorme L'Isle-d'Abeau</p>
                                 <p>Seconde générale et technologique option SI</p>
                             </div>
                         </div>
