--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Développement</strong></div>
-                                    <div class="col-sm-8">C++, C#, Java / Kotlin</div>
+                                    <div class="col-sm-8">Go, C++, C#, Java / Kotlin</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">DevOps</strong></div>
