--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">DevOps</strong></div>
-                                    <div class="col-sm-8">Gitlab-CI, Docker</div>
+                                    <div class="col-sm-8">Gitlab-CI, Docker, InfluxDB, Centreon, Grafana</div>
                                 </div>
                             </div>
                         </div>
