--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-4"><strong class="text-uppercase">Système d'exploitation serveur</strong></div>
-                                    <div class="col-sm-8"> Debian, Pfsense</div>
+                                    <div class="col-sm-8"> Debian, CentOS, Pfsense</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Système d'exploitation client</strong></div>
-                                    <div class="col-sm-8">Windows 7, 8, 8.1, 10 </br> Ubuntu, Debian</div>
+                                    <div class="col-sm-8">Windows 7, 8, 8.1, 10 </br> Ubuntu, Debian, Arch</div>
                                 </div>
                                 <div class="row mt-3">
                                     <div class="col-sm-4"><strong class="text-uppercase">Virtualisation</strong></div>
